# e4e-data-management

./: .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING  CONTRIBUTING.md  Cargo.toml  E4EDataManagement.sln  README.md  data_generator.ipynb  pyproject.toml  setup.py
.github/workflows/: build.yml  cargo-test.yml  clippy.yml  codeql.yml  dotnet-test.yml  pylint.yml  pytest.yml  release.yml
E4EDataManagement.Native/: DataManager.cs  E4EDataManagement.Native.csproj  Models.cs  NativeMethods.cs
E4EDataManagement.Tests/: AddFilesViewModelTests.cs  CreateDatasetViewModelTests.cs  CreateMissionViewModelTests.cs  DatasetViewModelTests.cs  E4EDataManagement.Tests.csproj  MissionViewModelTests.cs  ModelSerializationTests.cs
E4EDataManagement.UI/: App.axaml  App.axaml.cs  Converters.cs  E4EDataManagement.UI.csproj  Program.cs  README.md
E4EDataManagement.UI/ViewModels/: AddFilesViewModel.cs  CreateDatasetViewModel.cs  CreateMissionViewModel.cs  DatasetViewModel.cs  MainWindowViewModel.cs  MissionViewModel.cs  ViewModelBase.cs
E4EDataManagement.UI/Views/: AddFilesDialog.axaml  AddFilesDialog.axaml.cs  CreateDatasetDialog.axaml  CreateDatasetDialog.axaml.cs  CreateMissionDialog.axaml  CreateMissionDialog.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs
e4e_data_management/: README.md  __init__.py  archive.py  cli.py  config.py  core.py  data.py  data_wrangler.py  duplicator.py  exception.py  initialization.py  manifest.py  metadata.py  progress.py  storage.py  validator.py
example_dataset/: README.md
src/: dataset.rs  db.rs  errors.rs  ffi.rs  lib.rs  manager.rs  manifest.rs  metadata.rs  python.rs  utils.rs
test_data/: config_2.pkl
tests/: conftest.py  test_cli.py  test_dataset.py  test_dataset_view.py  test_duplicate.py  test_manifest.py  test_metadata.py  test_mission.py  test_progress.py  test_purge.py  test_push.py  test_rm.py  test_staging.py  test_status.py  test_storage.py  test_validator.py  test_zip.py
(+6 files in other folders)
