[package]
name = "e4e_data_management"
version = "0.3.1"
edition = "2021"

[lib]
name = "_core"
crate-type = ["cdylib"]

[features]
default = ["python"]
python = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.28.2", features = ["extension-module"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
thiserror = "2"
rayon = "1"
directories = "5"

[dev-dependencies]
tempfile = "3"


[lints.clippy]
# PyO3 #[pymethods] PyResult<T> return types trigger a false positive
useless_conversion = "allow"
